--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 name: Kwiki-FetchRSS
-version: 0.07
+version: 0.08
 abstract: WAFL Plugin To Fetch an RSS Feed
 license: perl
 distribution_type: module
 requires:
   Cache::FileCache: 0
   LWP::UserAgent: 0
-  XML::RSS: 0
+  XML::Feed: 0
+  Kwiki: 0.38
 no_index:
   directory:
     - inc
